app/assets/stylesheets/widgets/hero/side_panel.scss
.side-panel-hero {
  position: relative;

  + div { // Whatever is under this hero area should have double padding to account for the overlap
    padding-top: $one-column-widget-spacing*2;
  }

  video {
    width: 100%;
  }

  .cd-hero, .background-image, .background-video-wrapper {
    padding-bottom: $one-column-widget-spacing;
    pointer-events: none;

    @include media($medium-screen) {
      padding: 0;
    }

    @include media($large-screen) {
      overflow: hidden;
      display: block;
      position: absolute;
      top: 0; right: 0; left: 0; bottom: 0;
      width: 100%;
    }
  }

  .cd-hero-slider {
    height: 95%;
    list-style-type: none;

    li {
      padding: $one-column-widget-spacing/2 0;
      max-width: 100%;
      margin-bottom: 0;
      background-color: #E5E5E5;
      @include media($medium-screen) {
        padding: $one-column-widget-spacing/2 $one-column-widget-spacing;
      }
    }
  }

  .cd-slider-nav {
    height: 17%;
    background-color: transparent;
    text-align: right;
    pointer-events: all;
    padding-right: 32px;

    .cd-marker {
      background-color: transparent;
      color: #E5E5E5;
    }

    a {
      box-shadow: inset 0 2px 0 currentColor;
      padding-top: 10px;
      font-size: 10px;
      padding: 0 5px;
      font-weight: normal;
      text-transform: uppercase;
      max-width: 100px;
      text-align: left;
      &:hover { background-color: transparent; }
    }

    li {
      width: inherit;
      &.selected a { box-shadow: inset 0 2px 0 #006181; }
    }

    @include media($medium-screen) {
      height: 3%;
      padding-right: 64px;
      a {
        font-size: 12px;
        padding: 0 10px;
        max-width: none;
        text-align: right;
      }
    }

    @include media($large-screen){
      text-align: center;
      @include shift(4);
      a {
        font-size: 14px;
        padding: 0 15px;
      }
    }
  }

  .background-image {
    background-size: 0 0;
    @include media($large-screen) {
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center bottom;
    }
  }

  .background-video-wrapper #background-video {
    display: none;
    @include media($large-screen) {
      display: inline-block;
    }
  }

  .hero-content {
    @include outer-container;
    position: relative;
    padding: $one-column-widget-spacing/2 0 $one-column-widget-spacing;

    @include media($medium-screen) {
      padding: $one-column-widget-spacing/2 $one-column-widget-spacing;
    }
    @include media($large-screen) {
      padding: $one-column-widget-spacing 0;
      pointer-events: none;
      z-index: 666;
    }
  }

  // The side panel
  .hero-content-panel {
    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
    padding: $one-column-widget-spacing;
    background-color: white;

    @include media($large-screen) {
      @include span-columns(6);
      margin-bottom: -$one-column-widget-spacing*2;
      pointer-events: all;
    }

    // Title
    h1 { margin-top: 0; }

    // Subtitle
    h2 { font-weight: 200; }
    
    .calls-to-action { 
      margin-top: $base-spacing;
      a {
        @include button($blue);
        width: 100%;
        margin-bottom: $base-spacing;
        text-align: center;
        line-height: 36px;
        border-radius: 0px;
      }
    }

    .program-select {
      margin-top: $base-spacing*3;
      position: relative;

      .select-arrow {
        position: absolute;
        top: 21px;
        right: 18px;
        display: block;
        background: transparent;
        border-width: 0px 1px 1px 0px;
        border-style: solid;
        width: 8px;
        height: 8px;
        transform: rotateZ(45deg);
      }
      
      .hero-select-button {
        width: 100%;
        font-size: 16px;
        line-height: 36px;
        outline: none;
        padding: $base-spacing/2 $base-spacing;
        background-color: transparent;
        box-shadow: none;
        margin: 0;
        height: auto;
        border-radius: 24px;
        background-position: center right;
        background-repeat: no-repeat;
      }

      .hero-select-list {
        display: none;
        position: absolute;
        margin: 0;
        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
        width: 100%;
        background-color: #FFF;
        top: 0px;
        z-index: 668;

        li {
          max-width: 100%;
          font-size: 16px;
          line-height: 36px;
          margin: 0;
          padding: $base-spacing/2 $base-spacing;

          &:hover, &.selected { background-color: #E5E5E5; }
        }
      }
    }
  }

  // The featured article
  article {
    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
    color: white;
    pointer-events: all;

    @include media($medium-screen) {
      margin-top: $base-spacing*3;
    }

    @include media($large-screen) {
      @include span-columns(7);
      @include shift(9);
      margin-top: 15%;
      border-radius: 3px;
      position: absolute;
    }

    img, video {
      width: 100%;
      height: auto;
      margin-bottom: -6px;
      @include media($large-screen) { display: none; }
    }

    .content {
      padding: $base-spacing*2 $base-spacing*3;
      z-index: 667;
    }

    .category {
      @include content_label();
      color: white;
    }
    
    .title {
      margin: 0;
    }
    
    .subtitle { 
      margin-top: 0;
      font-weight: 200;
    }

    .body {
      color: white;
    }

    a {
      color: white;
      text-decoration: underline;
      font-weight: bold;
    }
  } 
}


// Override the default background color when no theme is applied
#theme .side-panel-hero .theme-bg-color-alpha { 
  background-color: rgba(0,0,0,0.95); 
}

